welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:16: error: '=' expected but identifier found.
def Carr-four-color() = {
        ^MethodsPicture:24: error: illegal start of simple expression
}
^